--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,3 +19,9 @@ requests = "^2.32.3"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+addopts = """
+        --alluredir=allure-results
+        """
